--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "React project with Clean code, following the principles of SOLID.",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --passWithNoTests",
+    "test:watch": "npm test -- --watch",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage",
+    "lint": "eslint {src,test}//*.ts",
+    "lint:fix": "eslint --fix {src,test}//*.ts",
     "prepare": "husky install"
   },
   "repository": {
@@ -19,19 +24,19 @@
   },
   "homepage": "https://github.com/felipesulzbach/clean-react#readme",
   "devDependencies": {
-    "@types/jest": "^29.0.3",
-    "@types/node": "^18.7.23",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "eslint": "^8.24.0",
-    "eslint-config-standard-with-typescript": "^23.0.0",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "eslint": "^8.31.0",
+    "eslint-config-standard-with-typescript": "^24.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.1",
-    "git-commit-msg-linter": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "git-commit-msg-linter": "^4.5.0",
     "husky": "^8.0.1",
-    "jest": "^29.1.1",
-    "lint-staged": "^13.0.3",
-    "ts-jest": "^29.0.2",
-    "typescript": "^4.8.4"
+    "jest": "^29.3.1",
+    "lint-staged": "^13.1.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.4"
   }
 }
